--- a/app/views/groundworkdocs/navigation.html.erb
+++ b/app/views/groundworkdocs/navigation.html.erb
@@ -1,7 +1,7 @@
       <div class="padded">
         <div class="row">
           <div class="three fifths bounceInRight animated">
-            <h1 class="zero museo-slab">Navigation Bars</h1>
+            <h1 class="zero museo-slab">Navigation</h1>
             <p class="quicksand">Responsive navigation created by <a href="http://twitter.com/ghepting" target="_blank">Gary Hepting</a></p>
           </div>
           <div class="two fifths align-right-ipad align-right-desktop flipInX animated">
@@ -19,17 +19,17 @@
               <div class="one whole padded">
                 <h4>iPad</h4>
                 <nav title="iPad Menu" role="navigation" class="nav">
-                  <ul role="menubar">
+                  <ul>
                     <li>
                       <button>Nav Item 1</button>
                     </li>
-                    <li role="menu" class="menu">
+                    <li>
                       <button>Nav Menu 1</button>
                       <ul>
                         <li>
                           <button>Menu Item 1</button>
                         </li>
-                        <li role="menu" class="menu">
+                        <li>
                           <button>Sub Menu 1</button>
                           <ul>
                             <li>
@@ -74,17 +74,17 @@
               <div class="one whole padded">
                 <h4>Small Tablet</h4>
                 <nav title="Small Tablet Menu" role="navigation" class="nav small-tablet">
-                  <ul role="menubar">
+                  <ul>
                     <li>
                       <button>Nav Item 1</button>
                     </li>
-                    <li role="menu" class="menu">
+                    <li>
                       <button>Nav Menu 1</button>
                       <ul>
                         <li>
                           <button>Menu Item 1</button>
                         </li>
-                        <li role="menu" class="menu">
+                        <li>
                           <button>Sub Menu 1</button>
                           <ul>
                             <li>
@@ -112,17 +112,17 @@
               <div class="one whole padded">
                 <h4>Mobile</h4>
                 <nav title="Mobile Menu" role="navigation" class="nav mobile">
-                  <ul role="menubar">
+                  <ul>
                     <li>
                       <button>Nav Item 1</button>
                     </li>
-                    <li role="menu" class="menu">
+                    <li>
                       <button>Nav Menu 1</button>
                       <ul>
                         <li>
                           <button>Menu Item 1</button>
                         </li>
-                        <li role="menu" class="menu">
+                        <li>
                           <button>Sub Menu 1</button>
                           <ul>
                             <li>
@@ -146,22 +146,60 @@
                 <pre data-lang="html">&lt;nav class=&quot;nav mobile&quot; title=&quot;Mobile Menu&quot;&gt;...&lt;/nav&gt;</pre>
               </div>
             </div>
+            <div class="row">
+              <div class="one whole padded">
+                <h4>Vegetarian (No Hamburger)</h4>
+                <nav role="navigation" class="nav nocollapse">
+                  <ul>
+                    <li>
+                      <button>Nav Item 1</button>
+                    </li>
+                    <li>
+                      <button>Nav Menu 1</button>
+                      <ul>
+                        <li>
+                          <button>Menu Item 1</button>
+                        </li>
+                        <li>
+                          <button>Sub Menu 1</button>
+                          <ul>
+                            <li>
+                              <button>Sub Menu Item 1</button>
+                            </li>
+                            <li>
+                              <button>Sub Menu Item 2</button>
+                            </li>
+                          </ul>
+                        </li>
+                        <li>
+                          <button>Menu Item 2</button>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <button>Nav Item 3</button>
+                    </li>
+                  </ul>
+                </nav><br>
+                <pre data-lang="html">&lt;nav class=&quot;nav nocollapse&quot; title=&quot;Vegetarian Menu&quot;&gt;...&lt;/nav&gt;</pre>
+              </div>
+            </div>
           </div><br>
           <h4>Colors</h4>
           <div class="row">
-            <div class="one third padded">
+            <div class="one half padded">
               <nav role="navigation" class="nav yellow">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -183,19 +221,19 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+            <div class="one half padded">
               <nav role="navigation" class="nav orange">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -217,19 +255,21 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+          </div>
+          <div class="row gap-top">
+            <div class="one half padded">
               <nav role="navigation" class="nav red">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -251,21 +291,19 @@
                 </ul>
               </nav>
             </div>
-          </div><br>
-          <div class="row">
-            <div class="one third padded">
+            <div class="one half padded">
               <nav role="navigation" class="nav pink">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -287,19 +325,21 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+          </div>
+          <div class="row gap-top">
+            <div class="one half padded">
               <nav role="navigation" class="nav purple">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -321,19 +361,19 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+            <div class="one half padded">
               <nav role="navigation" class="nav asphalt">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -355,21 +395,21 @@
                 </ul>
               </nav>
             </div>
-          </div><br>
-          <div class="row">
-            <div class="one third padded">
+          </div>
+          <div class="row gap-top">
+            <div class="one half padded">
               <nav role="navigation" class="nav blue">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -391,19 +431,19 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+            <div class="one half padded">
               <nav role="navigation" class="nav turquoise">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -425,19 +465,55 @@
                 </ul>
               </nav>
             </div>
-            <div class="one third padded">
+          </div>
+          <div class="row gap-top">
+            <div class="one half padded">
               <nav role="navigation" class="nav green">
-                <ul role="menubar">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
+                        <button>Sub Menu 1</button>
+                        <ul>
+                          <li>
+                            <button>Sub Menu Item 1</button>
+                          </li>
+                          <li>
+                            <button>Sub Menu Item 2</button>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <button>Menu Item 2</button>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <button>Nav Item 3</button>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="one half padded">
+              <nav role="navigation" class="nav charcoal">
+                <ul>
+                  <li>
+                    <button>Nav Item 1</button>
+                  </li>
+                  <li>
+                    <button>Nav Menu 1</button>
+                    <ul>
+                      <li>
+                        <button>Menu Item 1</button>
+                      </li>
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -460,20 +536,23 @@
               </nav>
             </div>
           </div><br>
+          <hr><br>
+          <h4>Vertical Orientation</h4>
           <div class="row">
             <div class="one third padded">
-              <nav role="navigation" class="nav charcoal">
-                <ul role="menubar">
+              <h4>iPad</h4>
+              <nav title="Vertical iPad Menu" role="navigation" class="nav vertical">
+                <ul>
                   <li>
                     <button>Nav Item 1</button>
                   </li>
-                  <li role="menu" class="menu">
+                  <li>
                     <button>Nav Menu 1</button>
                     <ul>
                       <li>
                         <button>Menu Item 1</button>
                       </li>
-                      <li role="menu" class="menu">
+                      <li>
                         <button>Sub Menu 1</button>
                         <ul>
                           <li>
@@ -493,7 +572,118 @@
                     <button>Nav Item 3</button>
                   </li>
                 </ul>
-              </nav>
+              </nav><br>
+              <pre data-lang="html">&lt;nav class=&quot;nav vertical&quot; title=&quot;Vertical iPad Menu&quot;&gt;...&lt;/nav&gt;</pre>
+            </div>
+            <div class="one third padded">
+              <h4>Small Tablet</h4>
+              <nav title="Vertical Small-Tablet Menu" role="navigation" class="nav small-tablet vertical">
+                <ul>
+                  <li>
+                    <button>Nav Item 1</button>
+                  </li>
+                  <li>
+                    <button>Nav Menu 1</button>
+                    <ul>
+                      <li>
+                        <button>Menu Item 1</button>
+                      </li>
+                      <li>
+                        <button>Sub Menu 1</button>
+                        <ul>
+                          <li>
+                            <button>Sub Menu Item 1</button>
+                          </li>
+                          <li>
+                            <button>Sub Menu Item 2</button>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <button>Menu Item 2</button>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <button>Nav Item 3</button>
+                  </li>
+                </ul>
+              </nav><br>
+              <pre data-lang="html">&lt;nav class=&quot;nav small-tablet vertical&quot; title=&quot;Vertical Small-Tablet Menu&quot;&gt;...&lt;/nav&gt;</pre>
+            </div>
+            <div class="one third padded">
+              <h4>Mobile</h4>
+              <nav title="Vertical Mobile Menu" role="navigation" class="nav mobile vertical">
+                <ul>
+                  <li>
+                    <button>Nav Item 1</button>
+                  </li>
+                  <li>
+                    <button>Nav Menu 1</button>
+                    <ul>
+                      <li>
+                        <button>Menu Item 1</button>
+                      </li>
+                      <li>
+                        <button>Sub Menu 1</button>
+                        <ul>
+                          <li>
+                            <button>Sub Menu Item 1</button>
+                          </li>
+                          <li>
+                            <button>Sub Menu Item 2</button>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <button>Menu Item 2</button>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <button>Nav Item 3</button>
+                  </li>
+                </ul>
+              </nav><br>
+              <pre data-lang="html">&lt;nav class=&quot;nav mobile vertical&quot; title=&quot;Vertical Mobile Menu&quot;&gt;...&lt;/nav&gt;</pre>
+            </div>
+          </div>
+          <div class="row">
+            <div class="one whole padded">
+              <h4>Vegetarian (No Hamburger)</h4>
+              <nav role="navigation" class="nav nocollapse vertical">
+                <ul>
+                  <li>
+                    <button>Nav Item 1</button>
+                  </li>
+                  <li>
+                    <button>Nav Menu 1</button>
+                    <ul>
+                      <li>
+                        <button>Menu Item 1</button>
+                      </li>
+                      <li>
+                        <button>Sub Menu 1</button>
+                        <ul>
+                          <li>
+                            <button>Sub Menu Item 1</button>
+                          </li>
+                          <li>
+                            <button>Sub Menu Item 2</button>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <button>Menu Item 2</button>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <button>Nav Item 3</button>
+                  </li>
+                </ul>
+              </nav><br>
+              <pre data-lang="html">&lt;nav class=&quot;nav vertical nocollapse&quot;&gt;...&lt;/nav</pre>
             </div>
           </div>
         </div>
