--- a/app/views/groundworkdocs/typography.html.erb
+++ b/app/views/groundworkdocs/typography.html.erb
@@ -513,9 +513,9 @@
             <div class="row">
               <div class="one whole padded">
                 <p>This is a sentence with an 
-                  <quote>inline quote</quote> nested within it.
+                  <q>inline quote</q> nested within it.
                 </p>
-                <pre data-lang="html">&lt;p&gt;This is a sentence with an &lt;quote&gt;inline quote&lt;/quote&gt; nested within it.&lt;/p&gt;</pre>
+                <pre data-lang="html">&lt;p&gt;This is a sentence with an &lt;q&gt;inline quote&lt;/q&gt; nested within it.&lt;/p&gt;</pre>
               </div>
             </div>
           </div>
